# scim-hangul

./: .gitignore  AUTHORS  ChangeLog  ChangeLog_0.3.1  Makefile.am  NEWS  README  README.ko  RELEASE  bootstrap  configure.ac  scim-hangul.spec.in
data/: Makefile.am
m4/: ChangeLog
po/: LINGUAS  Makevars  POTFILES.in  de.po  fr.po  ja.po  ko.po  nl.po  pa.po  scim-hangul.pot  sk.po  zh_CN.po
skim/: Makefile.am  bootstrap  configure.in.in
skim/icons/: Makefile.am
skim/po/: de.po  fr.po  it.po  ja.po  ko.po  nl.po  pa.po  skim-scim-hangul.pot  zh_CN.po  zh_TW.po
skim/setupui/: .cvsignore  Makefile.am  scim_hangul.kcfg  scim_hangul.kcfgc  scim_hangul_ui.ui  scimhangulsettingloader.cpp  scimhangulsettingloader.h  skimplugin_scim_hangul_config.desktop
src/: Makefile.am  scim_hangul_imengine.cpp  scim_hangul_imengine.h  scim_hangul_imengine_setup.cpp
